--- a/GameCaro/Properties/Resources.resx
+++ b/GameCaro/Properties/Resources.resx
@@ -133,4 +133,7 @@
   <data name="iconforGame" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\iconforGame.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="fireworks" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fireworks.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
